trilium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  namespace: homelab
  labels:
    name: trilium
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: trilium
  template:
    metadata:
      labels:
        name: trilium
    spec:
      securityContext:
        fsGroup: 1000
        # runAsUser: 1000
        # runAsGroup: 1000
      containers:
        - name: trilium # https://github.com/zadam/trilium
          image: "zadam/trilium"
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /home/node/trilium-data
              name: data
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: trilium-local-data-pvc
