trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-svc
  namespace: homelab
  labels:
    name: trilium-svc
  annotations:
    name: trilium-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: http
      protocol: TCP
      # nodePort: 30000
  selector:
    name: trilium
