trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium-ing
  namespace: homelab
  labels:
    name: trilium
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: trilium-svc
                port:
                  number: 8080
